<resources>
    <string name="app_name">Oh_sheet</string>
    <string name="Home_label">Home</string>
    <string name="create_timesheet_btn">Create a Timesheet</string>
    <string name="manage_timesheet_btn">Manage a Timesheet</string>
    <string name="statistics_btn">Statistics</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="verify_label">Verify</string>
    <string name="verify_instruction_label">We’ve sent a 4 digit code  to your number. Please enter it  to verify your account.</string>
    <string name="verify_nocode_label">No code? Let’s try again.</string>
    <string name="sign_in_label">Sign In</string>
    <string name="username_label">Username</string>
    <string name="password_input_label">Password: </string>
    <string name="remember_me_label">Remember Me?</string>
    <string name="lets_go_btn_label">Let\'s Go!!!</string>
    <string name="signUp_label">Sign Up</string>
    <string name="confirm_password_label">Confirm Password: </string>
    <string name="cellnumber_label">Cell Number</string>
    <string name="create_timesheet_descrip_label">Description</string>
    <string name="categories_label">Categories: </string>
    <string name="date_label">Date (YYYY-MM-DD)</string>
    <string name="start_time_label">Start Time</string>
    <string name="end_time_label">End Time</string>
    <string name="capture_photo_label">Capture Photo</string>
    <string name="minimum_time_goal_label">Minimum Time Goal</string>
    <string name="maximum_time_goal_label">Maximum Time Goal</string>
    <string name="receive_our_smart_label">Receive our SmartNotifications</string>
    <string name="all_done_label">All Done :)</string>
    <string name="sheets_label">Sheets</string>
    <string name="active_label">Active:  </string>
    <string name="non_active_label">Non Active: </string>
    <string name="menu_username_label">\@username</string>
    <string name="help_btn_label">HELP!!!</string>
    <string name="sign_out_btn_label">Sign Out</string>
    <string name="FAQ_label">FAQs</string>


    <string-array name="Timesheet_categories">
        <item>Work</item>
        <item>School</item>
        <item>Gym</item>
    </string-array>
</resources>