<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerifyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_arrow_pic"
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/untitled__1_" />

        <TextView
            android:id="@+id/verify_label"
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/verify_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/blank_image_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/plain_white_background" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/verify_code_input"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/verify_instruction_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_instruction_label"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/verify_nocode_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_nocode_label"
                android:textAlignment="center"
                android:textColor="@color/purple_200"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>