<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ManageTimesheetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:tint="@color/purple_200"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sheets_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:tint="@color/purple_200"
            app:srcCompat="@android:drawable/ic_input_add" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical">

        <SearchView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/active_label"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/create_timesheet_descrip_label" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/create_timesheet_descrip_label" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/non_active_label"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/create_timesheet_descrip_label" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/create_timesheet_descrip_label" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/create_timesheet_descrip_label" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/create_timesheet_descrip_label" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>